--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -1,1 +1,1 @@
-logo : https://github.com/hacklab-fi/pr/raw/master/tarra/tarra-35x100.png
+# logo : https://github.com/hacklab-fi/pr/raw/master/tarra/tarra-35x100.png
